# hedgehog-forall

./: hedgehog-forall.cabal  stack.yaml
lib/Hedgehog/: ForAll.hs
test/: Main.hs
