cabal-version: 2.2

name: hedgehog-forall
version: 0

build-type: Simple

common language
  build-depends: base
  default-language: Haskell2010

library
  import: language
  exposed-modules: Hedgehog.ForAll
  hs-source-dirs: lib

test-suite test
  import: language
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
